#253 update gradle and kotlin versions